# ITKImageProcessing

./: CMakeLists.txt  ITKImageProcessingConstants.h  ITKImageProcessingPlugin.cpp  ITKImageProcessingPlugin.h  LICENSE.txt  README.md  ZVI_Tags.txt  ZeissImportConstants.h  ZeissImportPlugin.cpp  ZeissImportPlugin.h  circle.yml
.circleci/: config.yml
Data/: RoboMet_Import_Test.json  TileConfiguration.registered.txt
Data/VectorImageImport/: 100.tif
Documentation/ITKImageProcessingFilters/: ApplyDewarpParameters.md  AxioVisionV4ToJson.md  Blend.md  CalcDewarpParameters.md  ITKAbsImage.md  ITKAcosImage.md  ITKAdaptiveHistogramEqualizationImage.md  ITKAdditiveGaussianNoiseImage.md  ITKAggregateLabelMap.md  ITKAntiAliasBinaryImage.md  ITKApproximateSignedDistanceMapImage.md  ITKAsinImage.md  ITKAtanImage.md  ITKAxioVisionV4Converter.md  ITKBilateralImage.md  ITKBinShrinkImage.md  ITKBinaryClosingByReconstructionImage.md  ITKBinaryContourImage.md  ITKBinaryDilateImage.md  ITKBinaryErodeImage.md  ITKBinaryFillholeImage.md  ITKBinaryGrindPeakImage.md  ITKBinaryImageToLabelMap.md  ITKBinaryMedianImage.md  ITKBinaryMinMaxCurvatureFlowImage.md  ITKBinaryMorphologicalClosingImage.md  ITKBinaryMorphologicalOpeningImage.md  ITKBinaryNotImage.md  ITKBinaryOpeningByReconstructionImage.md  ITKBinaryProjectionImage.md  ITKBinaryThinningImage.md  ITKBinaryThreshold.md  ITKBinaryThresholdImage.md  ITKBinaryThresholdProjectionImage.md  ITKBinomialBlurImage.md  ITKBitwiseNotImage.md  ITKBlackTopHatImage.md  ITKBoundedReciprocalImage.md  ITKBoxMeanImage.md  ITKBoxSigmaImage.md  (+166 more)
Documentation/ZeissImportFilters/: CalculateBackground.md  CalculateFiberStatistics.md  DetermineStitchingCoordinates.md  DetermineStitchingCoordinatesZeiss.md  EMMPMSegmentation.md  FindFiberEdges.md  ImportAxioVisionV4Montage.md  ImportZenInfoMontage.md  MetaXmlToTileConfiguration.md  MontageXdmfWriter.md  MultiRGBToGray.md  SeparateDataSets.md  ZeissImportFilter.md
ExamplePipelines/ITKImageProcessing/: AxioVisionV4Import.json  (+3 more)
FilterParameterWidgets/: SourceList.cmake
FilterParameters/: EbsdWarpPolynomialFilterParameter.cpp  EbsdWarpPolynomialFilterParameter.h  ImportVectorImageStackFilterParameter.cpp  ImportVectorImageStackFilterParameter.h  SourceList.cmake  VectorFileListInfo.h
Gui/: ITKImageProcessingGuiPlugin.cpp  ITKImageProcessingGuiPlugin.h  ZeissImportGuiPlugin.cpp  ZeissImportGuiPlugin.h
ITKImageProcessingFilters/: ApplyDewarpParameters.cpp  ApplyDewarpParameters.h  AxioVisionV4ToJson.cpp  AxioVisionV4ToJson.h  AxioVisionV4ToTileConfiguration.cpp  AxioVisionV4ToTileConfiguration.h  Blend.cpp  Blend.h  CalcDewarpParameters.cpp  CalcDewarpParameters.h  CalculateBackground.cpp  CalculateBackground.h  Dream3DTemplateAliasMacro.h  GenerateMontageConfiguration.cpp  GenerateMontageConfiguration.h  ITKAbsImage.cpp  ITKAbsImage.h  ITKAcosImage.cpp  ITKAcosImage.h  ITKAdaptiveHistogramEqualizationImage.cpp  ITKAdaptiveHistogramEqualizationImage.h  ITKAdditiveGaussianNoiseImage.cpp  ITKAdditiveGaussianNoiseImage.h  ITKAggregateLabelMap.cpp  ITKAggregateLabelMap.h  ITKAntiAliasBinaryImage.cpp  ITKAntiAliasBinaryImage.h  ITKApproximateSignedDistanceMapImage.cpp  ITKApproximateSignedDistanceMapImage.h  ITKAsinImage.cpp  ITKAsinImage.h  ITKAtanImage.cpp  ITKAtanImage.h  ITKAxioVisionV4Converter.cpp  ITKAxioVisionV4Converter.h  ITKBilateralImage.cpp  ITKBilateralImage.h  ITKBinShrinkImage.cpp  ITKBinShrinkImage.h  ITKBinaryClosingByReconstructionImage.cpp  (+423 more)
Python/: pyBodyTop.cpp
Resources/: ITKImageProcessing.qrc  ZeissImport.qrc
Test/: ApplyDewarpParametersTest.cpp  AxioVisionV4ToJsonTest.cpp  AxioVisionV4ToTileConfigurationTest.cpp  BlendTest.cpp  CMakeLists.txt  CalcDewarpTest.cpp  EdaxEbsdMontageTest.cpp  ITKAbsImageTest.cpp  ITKAcosImageTest.cpp  ITKAdaptiveHistogramEqualizationImageTest.cpp  ITKApproximateSignedDistanceMapImageTest.cpp  ITKAsinImageTest.cpp  ITKAtanImageTest.cpp  ITKAxioVisionV4ConverterTest.cpp  ITKBilateralImageTest.cpp  ITKBinaryClosingByReconstructionImageTest.cpp  ITKBinaryContourImageTest.cpp  ITKBinaryDilateImageTest.cpp  ITKBinaryErodeImageTest.cpp  ITKBinaryMinMaxCurvatureFlowImageTest.cpp  ITKBinaryMorphologicalClosingImageTest.cpp  ITKBinaryMorphologicalOpeningImageTest.cpp  ITKBinaryOpeningByReconstructionImageTest.cpp  ITKBinaryProjectionImageTest.cpp  ITKBinaryThinningImageTest.cpp  ITKBinaryThresholdImageTest.cpp  ITKBinaryThresholdTest.cpp  ITKBinomialBlurImageTest.cpp  ITKBlackTopHatImageTest.cpp  ITKBoundedReciprocalImageTest.cpp  ITKBoxMeanImageTest.cpp  ITKCastImageTest.cpp  ITKClosingByReconstructionImageTest.cpp  ITKConnectedComponentImageTest.cpp  ITKCosImageTest.cpp  ITKCurvatureAnisotropicDiffusionImageTest.cpp  ITKCurvatureFlowImageTest.cpp  ITKDanielssonDistanceMapImageTest.cpp  ITKDilateObjectMorphologyImageTest.cpp  ITKDiscreteGaussianImageTest.cpp  (+95 more)
Utilities/: RGBA.patch  SimpleITKJSONDream3DFilterCreation.py
ZeissImportFilters/: AxioVisionV4ToTileConfiguration.cpp  AxioVisionV4ToTileConfiguration.h  CalculateBackground.cpp  CalculateBackground.h  CalculateFiberStatistics.cpp  CalculateFiberStatistics.h  DetermineStitchingCoordinates.cpp  DetermineStitchingCoordinates.h  DetermineStitchingCoordinatesZeiss.cpp  DetermineStitchingCoordinatesZeiss.h  EMMPMSegmentation.cpp  EMMPMSegmentation.h  FindFiberEdges.cpp  FindFiberEdges.h  ImportAxioVisionV4Montage.cpp  ImportAxioVisionV4Montage.h  ImportZenInfoMontage.cpp  ImportZenInfoMontage.h  MetaXmlToTileConfiguration.cpp  MetaXmlToTileConfiguration.h  MetaXmlUtils.cpp  MetaXmlUtils.h  MontageXdmfWriter.cpp  MontageXdmfWriter.h  MultiRGBToGray.cpp  MultiRGBToGray.h  SeparateDataSets.cpp  SeparateDataSets.h  SourceList.cmake  ZeissImportFilter.cpp  ZeissImportFilter.h
ZeissXml/: SourceList.cmake  ZeissDirectoryPatterns.cpp  ZeissDirectoryPatterns.h  ZeissMetaEntry.cpp  ZeissMetaEntry.h  ZeissMetaFactory.cpp  ZeissMetaFactory.h  ZeissTagMapping.cpp  ZeissTagMapping.h  ZeissTagMappingConstants.h  ZeissTagMapping_InitMaps.cpp  ZeissTagsXmlSection.cpp  ZeissTagsXmlSection.h  ZeissXMLReader.h  ZeissXmlReader.cpp
(+53 files in other folders)
